--- a/Practica02/Readme.org
+++ b/Practica02/Readme.org
@@ -1,15 +1,10 @@
-* Practica 02
-** Objetivo
-Comprender y aplicar el concepto de llamadas a procedimientos remotos a traves 
-de una arquitectura cliente-servidor.
+* Respuestas
+**  ¿Qué es una IP y para que sirve?
+Es un identificador para mostrarse en la red
+** A grandes rasgos define lo que es un puerto
+Es una interfaz que te permite acceder a procesos remotos
+Siempre esta en escucha de alguna solicitud
+** ¿Se puede tener dos clientes en una misma computadora? 
+Si, diferentes puertos y con diferentes procesos
 
-** Requerimientos
-   Para esta práctica se va a utilizar
-   - python 2.7
-   - pyqt4
-   - xmlrpclib 
-** TODO [1/2]
-   - [X] Carcasa para Login y Chat
-   - [ ]  
-     
-   [[file:todo.png]]
+* Reporte
